--- a/settings.gradle
+++ b/settings.gradle
@@ -30,6 +30,7 @@ include "framework-bom"
 include "framework-docs"
 include "framework-platform"
 include "integration-tests"
+include 'demo-boot'
 
 rootProject.name = "spring"
 rootProject.children.each {project ->
